--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta http-equiv="refresh" content="3;
-    url= 'JetStrafe.github.io'">
+    url= 'https://JetStrafe.github.io'">
     <title>Redirecting...</title>
 </head>
 <body>
